# rusty-webserver

./: Cargo.toml  README.md  config.yaml
html/: 404.html
html/website1/: 404.html  index.html
html/website2/: 404.html  index.html
src/: main.rs  server.rs
