[package]
name = "http-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httparse = "1.7.1"
futures = "0.3.21"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "net", "io-util"]
